--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Kim Andre Fosslien Ottesen. Senior Designer and Developer.">
 
 	<title>Kim Andre Fosslien Ottesen</title>
 
