--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">Website and identity for Cinemateket</a></li>
       </ul>
     </div>
-    <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" noopener noreferrer>Westerdals Oslo ACT</a> 2015–2019. Guest reviwer at <a href="https://aho.no/" target="_blank" noopener noreferrer>AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" noopener noreferrer>Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
+    <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" noopener noreferrer>Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" noopener noreferrer>AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" noopener noreferrer>Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
     <p id="contact">Please get in touch via <a href="mailto:kiman@kimandreottesen.no">email</a> or&nbsp;<a href="https://twitter.com/kiman" target="_blank" noopener noreferrer>Twitter</a>.</p>
   </main>
 </body>
