--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <li><a href="https://snohetta.com/projects/434-the-norwegian-soloists39-choir-visual-identity-and-website" target="_blank" rel="noopener referrer">Website and identity for The Norwegian Soloist's Choir</a></li>
         <li><a href="https://www.instagram.com/fcoslo.no/" target="_blank" rel="noopener referrer">Identity and kit for FC Oslo</a></li>
         <li><a href="https://snohetta.com/project/195-living-the-nordic-light" target="_blank" rel="noopener referrer">Website for Living the Nordic Light</a></li>
-        <li><a href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">Website and identity for Cinemateket</a></li>
+        <li><a href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">E–commerce and identity for Cinemateket</a></li>
       </ul>
     </div>
     <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" noopener noreferrer>Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" noopener noreferrer>AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" noopener noreferrer>Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
