--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
         <li><a href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
         <li><a href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
-        <li><a href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Spacelike – generative artwork</a></li>
+        <li><a href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork – "Spacelike"</a></li>
         <li><a href="https://bjarnemelgaard.enterprises/" target="_blank" rel="noopener referrer">Identity and website for Bjarne Melgaard Enterprise</a></li>
         <li><a href="https://snohetta.com/projects/536-le-monde-group-headquarters-wayfinding" target="_blank" rel="noopener referrer">Wayfinding and Signage for Le Monde Group Headquarters</a></li>
         <li><a href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition design and books for Munchmuseet</a></li>
