--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </ul>
     </div>
     <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" noopener noreferrer>Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" noopener noreferrer>AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" noopener noreferrer>Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
+    <p id="research">Research and thoughts on <a href="https://www.are.na/kim-andre-ottesen--2">Are.na</a>.</p>
     <p id="contact">Please get in touch via <a href="mailto:kiman@kimandreottesen.no">email</a> or&nbsp;<a href="https://twitter.com/kiman" target="_blank" noopener noreferrer>Twitter</a>.</p>
   </main>
 </body>
