--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
         <li><a href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
         <li><a href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
         <li><a href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
-        <li><a href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork – "Spacelike"</a></li>
+        <li><a href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork "Spacelike"</a></li>
         <li><a href="https://bjarnemelgaard.enterprises/" target="_blank" rel="noopener referrer">Identity and website for Bjarne Melgaard Enterprise</a></li>
         <li><a href="https://snohetta.com/projects/536-le-monde-group-headquarters-wayfinding" target="_blank" rel="noopener referrer">Wayfinding and Signage for Le Monde Group Headquarters</a></li>
-        <li><a href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition design and books for Munchmuseet</a></li>
+        <li><a href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition and books for Munchmuseet</a></li>
         <li><a href="https://snohetta.com/projects/383-yme-digital-retail-experience-and-visual-identity" target="_blank" rel="noopener referrer">E-commerce and identity for YME Universe</a></li>
+        <li><a href="https://www.instagram.com/p/BseCr2oCmOp/" target="_blank" rel="noopener referrer">Type design "Reformat Grotesk"</a></li>
         <li><a href="https://snohetta.com/projects/471-vestre-a-website-helping-to-create-social-meeting-spaces" target="_blank" rel="noopener referrer">Website for Vestre</a></li>
         <li> <a href="https://saferock.no/" target="_blank" rel="noopener referrer">Website for Saferock</a></li>
         <li><a href="https://snohetta.com/projects/428-under-europes-first-underwater-restaurant" target="_blank" rel="noopener referrer">Website for Under</a></li>
+        <li><a href="https://snohetta.com/projects/363-emma-edvard-looking-sideways-loneliness-and-the-cinematic" target="_blank" rel="noopener referrer">Book design "Emma and Edvard Looking Sideways: Loneliness and the Cinematic"</a></li>
+        
         <li><a href="http://northof.no/" target="_blank" rel="noopener referrer">Website and identity for North Of</a></li>
         <li><a href="https://snohetta.com/projects/434-the-norwegian-soloists39-choir-visual-identity-and-website" target="_blank" rel="noopener referrer">Website and identity for The Norwegian Soloist's Choir</a></li>
         <li><a href="https://www.instagram.com/fcoslo.no/" target="_blank" rel="noopener referrer">Identity and kit for FC Oslo</a></li>
