Years on work experience

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main id="content">
     <h1 id="name">Kim Andre Fosslien Ottesen</h1>
-    <p id="description">Senior Designer and Developer at <a href="https://heydays.no/" target="_blank" noopener noreferrer>Heydays</a>. Previously at <a href="https://snohetta.com/" target="_blank" noopener noreferrer>Snøhetta</a> 2013–2021.</p>
+    <p id="description">Senior Designer and Developer at <a href="https://heydays.no/" target="_blank" noopener noreferrer>Heydays</a> (2021–). Previously at <a href="https://snohetta.com/" target="_blank" noopener noreferrer>Snøhetta</a> (2013–2021).</p>
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
