--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main id="content">
     <h1 id="name">Kim Andre Fosslien Ottesen</h1>
-    <p id="description">Senior Designer and Developer at <a href="https://heydays.no/" target="_blank" noopener noreferrer>Heydays</a> (2021–). Previously at <a href="https://snohetta.com/" target="_blank" noopener noreferrer>Snøhetta</a> (2013–2021).</p>
+    <p id="description">Senior Designer and Developer at <a href="https://heydays.no/" target="_blank" rel="noopener noreferrer">Heydays</a> (2021–). <a href="https://marius.kim/" target="_blank" rel="noopener noreferrer">Marius.kim</a> after hours. Previously at <a href="https://snohetta.com/" target="_blank" rel="noopener noreferrer">Snøhetta</a> (2013–2021).</p>
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
@@ -38,9 +38,9 @@
         <li><a href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">E-commerce and identity for Cinemateket</a></li>
       </ul>
     </div>
-    <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" noopener noreferrer>Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" noopener noreferrer>AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" noopener noreferrer>Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
+    <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" rel="noopener noreferrer">Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" rel="noopener noreferrer">AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" rel="noopener noreferrer">Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
     <p id="research">Research and thoughts on <a href="https://www.are.na/kim-andre-ottesen--2">Are.na</a>.</p>
-    <p id="contact">Please get in touch via <a href="mailto:kiman@kimandreottesen.no">email</a> or&nbsp;<a href="https://twitter.com/kiman" target="_blank" noopener noreferrer>Twitter</a>.</p>
+    <p id="contact">Please get in touch via <a href="mailto:kiman@kimandreottesen.no">email</a> or&nbsp;<a href="https://twitter.com/kiman" target="_blank" rel="noopener noreferrer">Twitter</a>.</p>
   </main>
 </body>
 </html>
