--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
-        <li><a href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
-        <li><a href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
-        <li><a href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
-        <li><a href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork "Spacelike"</a></li>
-        <li><a href="https://bjarnemelgaard.enterprises/" target="_blank" rel="noopener referrer">Identity and website for Bjarne Melgaard Enterprise</a></li>
-        <li><a href="https://snohetta.com/projects/536-le-monde-group-headquarters-wayfinding" target="_blank" rel="noopener referrer">Wayfinding and Signage for Le Monde Group Headquarters</a></li>
-        <li><a href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition and books for Munchmuseet</a></li>
-        <li><a href="https://snohetta.com/projects/383-yme-digital-retail-experience-and-visual-identity" target="_blank" rel="noopener referrer">E-commerce and identity for YME Universe</a></li>
-        <li><a href="https://www.instagram.com/p/BseCr2oCmOp/" target="_blank" rel="noopener referrer">Type design "Reformat Grotesk"</a></li>
-        <li><a href="https://snohetta.com/projects/471-vestre-a-website-helping-to-create-social-meeting-spaces" target="_blank" rel="noopener referrer">Website for Vestre</a></li>
-        <li> <a href="https://saferock.no/" target="_blank" rel="noopener referrer">Website for Saferock</a></li>
-        <li><a href="https://snohetta.com/projects/428-under-europes-first-underwater-restaurant" target="_blank" rel="noopener referrer">Website for Under</a></li>
-        <li><a href="https://snohetta.com/projects/363-emma-edvard-looking-sideways-loneliness-and-the-cinematic" target="_blank" rel="noopener referrer">Book design "Emma and Edvard Looking Sideways: Loneliness and the Cinematic"</a></li>
+        <li><a class="heydays" href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
+        <li><a class="mariuskim" href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
+        <li><a class="personal" href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
+        <li><a class="personal" href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork "Spacelike"</a></li>
+        <li><a class="snohetta" href="https://bjarnemelgaard.enterprises/" target="_blank" rel="noopener referrer">Identity and website for Bjarne Melgaard Enterprise</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/536-le-monde-group-headquarters-wayfinding" target="_blank" rel="noopener referrer">Wayfinding and Signage for Le Monde Group Headquarters</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition and books for Munchmuseet</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/383-yme-digital-retail-experience-and-visual-identity" target="_blank" rel="noopener referrer">E-commerce and identity for YME Universe</a></li>
+        <li><a class="personal" href="https://www.instagram.com/p/BseCr2oCmOp/" target="_blank" rel="noopener referrer">Type design "Reformat Grotesk"</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/471-vestre-a-website-helping-to-create-social-meeting-spaces" target="_blank" rel="noopener referrer">Website for Vestre</a></li>
+        <li><a class="snohetta" href="https://saferock.no/" target="_blank" rel="noopener referrer">Website for Saferock</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/428-under-europes-first-underwater-restaurant" target="_blank" rel="noopener referrer">Website for Under</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/363-emma-edvard-looking-sideways-loneliness-and-the-cinematic" target="_blank" rel="noopener referrer">Book design "Emma and Edvard Looking Sideways: Loneliness and the Cinematic"</a></li>
         
-        <li><a href="http://northof.no/" target="_blank" rel="noopener referrer">Website and identity for North Of</a></li>
-        <li><a href="https://snohetta.com/projects/434-the-norwegian-soloists39-choir-visual-identity-and-website" target="_blank" rel="noopener referrer">Website and identity for The Norwegian Soloist's Choir</a></li>
-        <li><a href="https://www.instagram.com/fcoslo.no/" target="_blank" rel="noopener referrer">Identity and kit for FC Oslo</a></li>
-        <li><a href="https://snohetta.com/project/195-living-the-nordic-light" target="_blank" rel="noopener referrer">Website for Living the Nordic Light</a></li>
-        <li><a href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">E-commerce and identity for Cinemateket</a></li>
+        <li><a class="mariuskim" href="http://northof.no/" target="_blank" rel="noopener referrer">Website and identity for North Of</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/434-the-norwegian-soloists39-choir-visual-identity-and-website" target="_blank" rel="noopener referrer">Website and identity for The Norwegian Soloist's Choir</a></li>
+        <li><a class="mariuskim" href="https://www.instagram.com/fcoslo.no/" target="_blank" rel="noopener referrer">Identity and kit for FC Oslo</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/project/195-living-the-nordic-light" target="_blank" rel="noopener referrer">Website for Living the Nordic Light</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/387-cinemateket" target="_blank" rel="noopener referrer">E-commerce and identity for Cinemateket</a></li>
       </ul>
     </div>
     <p id="other">Examiner, lecturer and guest teacher at <a href="https://www.kristiania.no/" target="_blank" rel="noopener noreferrer">Westerdals Oslo ACT</a> 2015–2019. Guest reviewer at <a href="https://aho.no/" target="_blank" rel="noopener noreferrer">AHO (The Oslo School of Architecture and Design)</a> 2021–2022. Board member of <a href="https://www.grafill.no/" target="_blank" rel="noopener noreferrer">Grafill Interactive</a> since 2014, arranging talks and workshops.</p>
