--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a class="mariuskim" href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
         <li><a class="personal" href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
         <li><a class="personal" href="https://www.fxhash.xyz/generative/7433" target="_blank" rel="noopener referrer">Generative artwork "Spacelike"</a></li>
+        <li><a class="snohetta" href="https://snohetta.com/projects/488-new-visual-identity-for-the-wikipedia-movement" target="_blank" rel="noopener referrer">Visual identity for the Wikipedia Movement</a></li>
         <li><a class="snohetta" href="https://bjarnemelgaard.enterprises/" target="_blank" rel="noopener referrer">Identity and website for Bjarne Melgaard Enterprise</a></li>
         <li><a class="snohetta" href="https://snohetta.com/projects/536-le-monde-group-headquarters-wayfinding" target="_blank" rel="noopener referrer">Wayfinding and Signage for Le Monde Group Headquarters</a></li>
         <li><a class="snohetta" href="https://snohetta.com/projects/219-melgaard-munch" target="_blank" rel="noopener referrer">Exhibition and books for Munchmuseet</a></li>
