--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
+        <li><a class="heydays" href="https://www.instagram.com/p/Ce3V_myLQNK/" target="_blank" rel="noopener referrer">Generative logo tool for Norselab</a></li>
         <li><a class="heydays" href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
         <li><a class="mariuskim" href="https://www.instagram.com/p/COVM5afAtWD/" target="_blank" rel="noopener referrer">AI artwork for ARY</a></li>
         <li><a class="personal" href="https://www.instagram.com/p/COxg5s4Ajk0/" target="_blank" rel="noopener referrer">AI generated typeface</a></li>
