--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Kim Andre Fosslien Ottesen. Senior Designer and Developer.">
+  <meta name="description" content="Senior designer and developer working with people and technology">
 
 	<title>Kim Andre Fosslien Ottesen</title>
 
@@ -13,7 +13,7 @@
 <body>
   <main id="content">
     <h1 id="name">Kim Andre Fosslien Ottesen</h1>
-    <p id="description">Senior Designer and Developer at <a href="https://heydays.no/" target="_blank" rel="noopener noreferrer">Heydays</a> (2021–). <a href="https://marius.kim/" target="_blank" rel="noopener noreferrer">Marius.kim</a> after hours. Previously at <a href="https://snohetta.com/" target="_blank" rel="noopener noreferrer">Snøhetta</a> (2013–2021).</p>
+    <p id="description">Senior designer and developer working with people and technology. Currently <a href="https://heydays.no/" target="_blank" rel="noopener noreferrer">Heydays</a> (2021–). <a href="https://marius.kim/" target="_blank" rel="noopener noreferrer">Marius.kim</a> after hours. Previously at <a href="https://snohetta.com/" target="_blank" rel="noopener noreferrer">Snøhetta</a> (2013–2021).</p>
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
