--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <ul id="projects-list">
         <li><a class="heydays nda" href="#">App concept for Google Seed Studio (NDA)</a></li>
         <li><a class="heydays nda" href="#">Health tech for Aidn (TBA)</a></li>
+        <li><a class="heydays nda" href="#">Personalized news app for Amedia (TBA)</a></li>
         <li><a class="heydays" href="https://www.instagram.com/p/Ce3V_myLQNK/" target="_blank" rel="noopener referrer">Generative logo tool for Norselab</a></li>
         <li><a class="heydays" href="https://heydays.no/" target="_blank" rel="noopener referrer">Website and identity for Heydays</a></li>
         <li><a class="heydays" href="https://avaocean.no" target="_blank" rel="noopener referrer">Identity and web for Ava Ocean</a></li>
