--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
-        <li><a class="heydays nda" href="#">App concept for Google Seed Studio (NDA)</a></li>
+        <li><a class="heydays nda" href="#">Future concept for Google Seed Studio (NDA)</a></li>
         <li><a class="heydays nda" href="#">Health tech for Aidn (TBA)</a></li>
         <li><a class="heydays nda" href="#">Personalized news app for Amedia (TBA)</a></li>
         <li><a class="heydays" href="https://www.instagram.com/p/Ce3V_myLQNK/" target="_blank" rel="noopener referrer">Generative logo tool for Norselab</a></li>
