Updated OH project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
-        <li><a class="openinghours" href="https://openinghours.studio">Opening Hours brand and website</a></li>
+        <li><a class="openinghours" href="https://openinghours.studio">Opening Hours brand, custom type and website</a></li>
         <li><a class="heydays nda" href="#">Future concept for Google Seed Studio (NDA)</a></li>
         <li><a class="heydays nda" href="#">Health tech for Aidn (TBA)</a></li>
         <li><a class="heydays nda" href="#">Personalized news app for Amedia (TBA)</a></li>
