Added new ARY project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="projects">
       <p id="projects-intro">Some more or less recent work:</p>
       <ul id="projects-list">
+        <li><a class="openinghours" href="https://ary.no">Digital spatial design and artwork for ARY</a></li>
         <li><a class="openinghours" href="https://openinghours.studio">Opening Hours brand, custom type and website</a></li>
         <li><a class="heydays nda" href="#">Future concept for Google Seed Studio (NDA)</a></li>
         <li><a class="heydays nda" href="#">Health tech for Aidn (TBA)</a></li>
